<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="cn.com.caoyue.contacts0.EditActivity">

    <include
        android:id="@+id/toolbar_inEdit"
        layout="@layout/toolbar_with_back" />

    <TextView
        android:id="@+id/tip_input_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/toolbar_inEdit"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/tip_input_info" />


    <android.support.v7.widget.CardView
        android:id="@+id/cardview_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tip_input_info"
        android:layout_margin="15dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/name"
                android:layout="@layout/floatlabel_layout" />

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/number"
                android:layout="@layout/floatlabel_layout" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/ok"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"
                    android:clickable="true"
                    android:background="@drawable/ripple_default" />

                <TextView
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_toLeftOf="@id/ok_button"
                    android:text="@string/cancel"
                    android:textSize="20sp"
                    android:textColor="@android:color/darker_gray"
                    android:clickable="true"
                    android:background="@drawable/ripple_default" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
